# data-engineering-medallion

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  data_engineering.ipynb  docker-compose.yml  pyproject.toml  smoke_test.sh
