[project]
name = "data-engineering-medallion"
version = "0.1.0"
description = "Beginner data engineering workshop: medallion pattern (Bronze -> Silver -> Gold -> QA -> Marts) with DuckDB and Pandas. A learnwithparam.com workshop."
authors = [{ name = "Param Harrison", email = "param@learnwithparam.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "pyarrow>=15.0.0",
    "datasets>=2.18.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.1.0",
    "nbconvert>=7.14.0",
    "ipykernel>=6.29.0",
    "python-dotenv>=1.0.0",
]
